Update background position CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body::before {
   position: fixed;
   background: #040404 url("../img/Batman.jpg") top left no-repeat;
   background-size: cover;
+  background-position: center;
   left: 0;
   right: 0;
   top: 0;
